[package]
name = "tokio_with_wasm"
version = "0.5.3"
edition = "2021"
license = "MIT"
description = "Mimicking tokio functionalies on web browsers"
repository = "https://github.com/cunarist/tokio-with-wasm"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# https://github.com/tokio-rs/tokio/blob/master/tokio/Cargo.toml
default = []
full = ["macros", "sync", "rt", "time"]
macros = []
sync = []
rt = []
time = []

[dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", features = [
    'Worker',
    'WorkerOptions',
    'WorkerType',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
    'ErrorEvent',
    'Blob',
    "BlobPropertyBag",
    'Url',
] }
