[package]
name = "tokio_with_wasm"
version = "0.6.2"
edition = "2021"
license = "MIT"
description = "Mimicking tokio functionalies on web browsers"
repository = "https://github.com/cunarist/tokio-with-wasm"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

[features]
# https://github.com/tokio-rs/tokio/blob/master/tokio/Cargo.toml
default = []
full = ["macros", "sync", "rt", "time"]
macros = ["tokio/macros"]
sync = ["tokio/sync"]
rt = []
time = []

[dependencies]
tokio = "1.x.x"
js-sys = "0.3.x"
wasm-bindgen = "0.2.x"
wasm-bindgen-futures = "0.4.x"
web-sys = { version = "0.3.x", features = [
    'Worker',
    'WorkerOptions',
    'WorkerType',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
    'ErrorEvent',
    'Blob',
    "BlobPropertyBag",
    'Url',
] }
