[package]
name = "tokio_with_wasm"
version = "0.8.2"
edition = "2021"
license = "MIT"
description = "Mimicking tokio functionalities on web browsers"
repository = "https://github.com/cunarist/tokio-with-wasm"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

[features]
# https://github.com/tokio-rs/tokio/blob/master/tokio/Cargo.toml
default = []
full = ["macros", "sync", "time", "rt", "rt-multi-thread"]
macros = ["tokio/macros"]
sync = ["tokio/sync"]
time = []
rt = []
rt-multi-thread = []

[dependencies]
tokio_with_wasm_proc = "0.8.2"
tokio = "1.x.x"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.70"
web-sys = { version = "0.3.70", features = [
    'Worker',
    'WorkerOptions',
    'WorkerType',
    'DedicatedWorkerGlobalScope',
    'MessageEvent',
    'ErrorEvent',
    'Blob',
    "BlobPropertyBag",
    'Url',
] }
