[package]
name = "tokio_with_wasm_proc"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "Mimicking tokio functionalities on web browsers"
repository = "https://github.com/cunarist/tokio-with-wasm"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
all-features = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.77", features = ["full"] }
quote = "1.0.37"
